tests/examples/infer.out
version bump: 1.0.0 -> (Breaking) -> 2.0.0
warning: Breaking changes in `a`
  --> $REPO_PATH/tests/examples/infer.rs:33:5
   |
33 | /     pub fn a<A: a::Def>(a: A) -> A {
34 | |         a
35 | |     }
   | |_____^
   |
   = warning: Breaking (TypeChanged { error: Sorts(ExpectedFound { expected: fn(A) -> A {oldandnew::old::a::<A>}, found: fn(A) -> A {oldandnew::new::a::<A>} }) })

warning: Breaking changes in `b`
  --> $REPO_PATH/tests/examples/infer.rs:37:5
   |
37 | /     pub fn b() -> a::Opq {
38 | |         a::Opq
39 | |     }
   | |_____^
   |
   = warning: Breaking (TypeChanged { error: Sorts(ExpectedFound { expected: fn() -> oldandnew::old::a::Klm {oldandnew::old::b}, found: fn() -> oldandnew::new::a::Opq {oldandnew::new::b} }) })

